{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 11,
  "lineage": "fa148d01-e3a7-0885-a558-6d99941b027d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rds_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:814586508213:internet-gateway/igw-0e9fc3447d298337f",
            "id": "igw-0e9fc3447d298337f",
            "owner_id": "814586508213",
            "region": "ap-south-1",
            "tags": {
              "Name": "rds-internet-gateway"
            },
            "tags_all": {
              "Name": "rds-internet-gateway"
            },
            "vpc_id": "vpc-0f9f5930a954f6a5b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rds_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:814586508213:route-table/rtb-0e58b8850afb78c3e",
            "id": "rtb-0e58b8850afb78c3e",
            "owner_id": "814586508213",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9fc3447d298337f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rds-public-route-table"
            },
            "tags_all": {
              "Name": "rds-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9f5930a954f6a5b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.rds_igw",
            "aws_vpc.rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00993678ae9135617",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e58b8850afb78c3e",
            "subnet_id": "subnet-0b2b90b7c6df32e17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.rds_igw",
            "aws_route_table.rds_route_table",
            "aws_subnet.aws_subnet_1",
            "aws_vpc.rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbd639ba5bb7bea7",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e58b8850afb78c3e",
            "subnet_id": "subnet-0defb0e450639ec9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.rds_igw",
            "aws_route_table.rds_route_table",
            "aws_subnet.aws_subnet_2",
            "aws_vpc.rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:814586508213:security-group/sg-02e789d4cbebbac3d",
            "description": "Security group for MySQL RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e789d4cbebbac3d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow MySQL access from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysqldb_sg",
            "name_prefix": "",
            "owner_id": "814586508213",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql-db-sg"
            },
            "tags_all": {
              "Name": "mysql-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9f5930a954f6a5b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:814586508213:subnet/subnet-0b2b90b7c6df32e17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2b90b7c6df32e17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "814586508213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "rds-subnet-1"
            },
            "tags_all": {
              "Name": "rds-subnet-1"
            },
            "vpc_id": "vpc-0f9f5930a954f6a5b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:814586508213:subnet/subnet-0defb0e450639ec9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0defb0e450639ec9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "814586508213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "rds-subnet-2"
            },
            "tags_all": {
              "Name": "rds-subnet-2"
            },
            "vpc_id": "vpc-0f9f5930a954f6a5b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rds_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:814586508213:vpc/vpc-0f9f5930a954f6a5b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0022942ea46773249",
            "default_route_table_id": "rtb-02d26337feb3ce432",
            "default_security_group_id": "sg-0c652331e79969abb",
            "dhcp_options_id": "dopt-0a11dcfc29a5fd424",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9f5930a954f6a5b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d26337feb3ce432",
            "owner_id": "814586508213",
            "region": "ap-south-1",
            "tags": {
              "Name": "rds_vpc"
            },
            "tags_all": {
              "Name": "rds_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}